<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LogicUniversity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="testing">Testing</string>
    <string name="title_activity_item_screen">ItemScreen</string>
    <string name="title_activity_item_detail_screen">ItemDetailScreen</string>
    <string name="availableQty">Available Qty</string>
    <string name="requisitionQty">Requisted Qty</string>
    <string name="fulfillQty">Fulfill Qty</string>
    <string name="fulfill">Fulfill</string>
    <string name="title_activity_login">Logic Clerk</string>
    <string name="munSave">Save</string>
    <string name="mnuDistribute">Distribute</string>
    <string name="lblusername">Username</string>
    <string name="lblPassword">Password</string>
    <string name="btnLogin">Login</string>
    <string name="lblKeepMeLoggedIn">Keep me logged in</string>
    <string name="title_activity_retrieval_list">RetrievalList</string>
    <string name="title_activity_report_discrepancy">Report Discrepancy</string>
    <string name="lblStationery">Stationery</string>
    <string name="lblQty">Quantity</string>
    <string name="lblRemark">Remark</string>
    <string name="btnSave">Save</string>
    <string name="lblReportDiscrepancyItem">Report Discrepancy Item</string>
    <string name="title_activity_my_preferences">MyPreferencesActivity</string>
    <string name="title_activity_home">Home</string>
    <string name="lblLogout">Log out</string>
    <string name="lblAppSetting">App Setting</string>

</resources>
