<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Login" >

    <TextView
        android:id="@+id/lblStationery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/lblusername"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="@color/midnight_blue"
        />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblStationery"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lblStationery"
        android:ems="10" 
        android:textColor="@color/midnight_blue"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtUsername"
        android:layout_marginTop="36dp"
        android:text="@string/lblPassword"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="@color/midnight_blue"
        />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignRight="@+id/txtUsername"
        android:layout_below="@+id/textView2"
        android:ems="10"
        android:inputType="textPassword" 
        android:textColor="@color/midnight_blue"
        >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/chkKeepMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtPassword"
        android:layout_marginTop="17dp"
        android:text="@string/lblKeepMeLoggedIn" 
        android:textColor="@color/midnight_blue"
        />

    <TextView
        android:id="@+id/lblLoginError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/chkKeepMe"
        android:layout_marginTop="15dp"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:textColor="#730000"
        
        />

    <Button
        android:id="@+id/btnLogin"
        style="@style/btnStyleBlackpearl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/lblLoginError"
        android:layout_marginTop="14dp"
        android:onClick="onClick"
        android:text="@string/btnLogin" />

</RelativeLayout>
