<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ItemDetailScreen" 
    android:focusable="true" android:focusableInTouchMode="true"
    >

    <TextView
        android:id="@+id/lblStationery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/availableQty"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/lblRequestedQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lblStationery"
        android:layout_alignBottom="@+id/lblStationery"
        android:layout_alignParentRight="true"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:layout_marginRight="10sp"
        />

    <TextView
        android:id="@+id/lblFulfillQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblStationery"
        android:layout_below="@+id/lblStationery"
        android:layout_marginTop="30dp"
        android:text="@string/requisitionQty"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtRequistedQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/lblFulfillQty"
        android:layout_alignParentRight="true"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" 
        android:layout_marginRight="10sp"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lblFulfillQty"
        android:layout_below="@+id/lblFulfillQty"
        android:layout_marginTop="33dp"
        android:text="@string/fulfillQty"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnFulfill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView5"
        android:layout_alignRight="@+id/txtFulfillQty"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="29dp"
        android:text="@string/fulfill" 
        android:onClick="onClick"
        android:textAppearance="?android:attr/textAppearanceLarge"
        style="@style/btnStyleBlackpearl"
        />

    <EditText
        android:id="@+id/txtFulfillQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnFulfill"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:gravity="right"
        android:inputType="number"
        android:textSize="24sp"
        android:textStyle="bold"
        android:width="70dp" />

</RelativeLayout>
